--- a/task_2.html
+++ b/task_2.html
@@ -1,1 +1,33 @@
-task_2.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Моє Портфоліо</title>
+</head>
+<body>
+    <header>
+        <h1>Моє Портфоліо</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Проект 1</h2>
+            <figure>
+                <img src="project1.jpg" alt="Проект 1">
+                <figcaption>Зображення проекту 1</figcaption>
+            </figure>
+        </section>
+        <section>
+            <h2>Проект 2</h2>
+            <figure>
+                <img src="project2.jpg" alt="Проект 2">
+                <figcaption>Зображення проекту 2</figcaption>
+            </figure>
+        </section>
+        <!-- Додайте інші секції за аналогією -->
+    </main>
+    <footer>
+        <p>&copy; 2024 Моє Портфоліо. Усі права захищені.</p>
+    </footer>
+</body>
+</html>
